2008-07-11  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Sam

        Removed unneeded export

        * WebCore.base.exp:

2008-07-11  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Geoff.

        <rdar://problem/6067178> REGRESSION: Start profile button in profiler
        now profiles inspector rather than actual page (19833)
        - The JSQuarantinedObjectWrapper should use the wrapped exec state
        so that calls to it execute in its quarantined world.

        * bindings/js/JSQuarantinedObjectWrapper.cpp:
        (WebCore::JSQuarantinedObjectWrapper::construct):
        (WebCore::JSQuarantinedObjectWrapper::call):

2008-07-11  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        StyleRareNonInheritedData needs to initialize and compare
        m_maskBoxImage.
        <https://bugs.webkit.org/show_bug.cgi?id=20005>

        * rendering/style/RenderStyle.cpp:
        (WebCore::StyleRareNonInheritedData::StyleRareNonInheritedData):
        (WebCore::StyleRareNonInheritedData::operator==):

2008-07-11  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        Bug 18885: RenderLayer::enclosingPositionedAncestor() should
        look for transforms, since transforms create containing
        blocks.
        <https://bugs.webkit.org/show_bug.cgi?id=18885>

        Test: fast/transforms/transform-positioned-ancestor.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::stackingContext):
        (WebCore::RenderLayer::enclosingPositionedAncestor):
        (WebCore::RenderLayer::enclosingTransformedAncestor):

2008-07-11  Jacob Refstrup  <jacob.refstrup@hp.com>

        Reviewed by Darin Adler

        http://bugs.webkit.org/show_bug.cgi?id=19978
        GTK port always ends up with # at the end of resource URLs (and hence can't load files)

        - Optimized KURL::removeRef() and used it rather than setRef("")
          which after r35040 does the wrong thing.
