@@ -1,3 +1,3 @@
 Test	http://www.w3.org/2001/DOM-Test-Suite/level3/core/nodecomparedocumentposition03
 Status	error
-Message	Line 112: TypeError
+Message	Line 115: ReferenceError
