@@ -1,3 +1,3 @@
 Test	http://www.w3.org/2001/DOM-Test-Suite/level3/core/nodecomparedocumentposition05
 Status	error
-Message	Line 113: TypeError
+Message	Line 117: ReferenceError
