@@ -1,3 +1,3 @@
 Test	http://www.w3.org/2001/DOM-Test-Suite/level3/core/nodecomparedocumentposition16
 Status	error
-Message	Line 106: TypeError
+Message	Line 109: ReferenceError
