@@ -1,4 +1,3 @@
 Test	http://www.w3.org/2001/DOM-Test-Suite/level3/core/nodecomparedocumentposition18
-Status	error
-Message	Line 107: TypeError
+Status	Success
 T1T2
