@@ -1,3 +1,2 @@
 Test	http://www.w3.org/2001/DOM-Test-Suite/level3/core/nodecomparedocumentposition25
-Status	error
-Message	Line 105: TypeError
+Status	Success
